# tracker

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  install-hooks.sh
.claude/skills/tracker-design/: SKILL.md
.githooks/: pre-commit
.github/: dependabot.yaml
.github/workflows/: automerge.yaml  ci.yaml  cve-scan.yaml  dockerimage.yaml
backend/: .env.example  Cargo.toml
backend/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  scan.rs  state.rs
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: api.rs
frontend/: .gitignore  .prettierignore  eslint.config.js  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  fontsource.d.ts
frontend/src/lib/: BoingBall.svelte  PatternView.svelte  PatternViewScroll.svelte  Scope.svelte  api.ts  player.svelte.ts  theme.svelte.ts
frontend/src/lib/styles/: halo.css
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/static/: manifest.webmanifest
