[workspace]
resolver = "2"
members = [
    "backend",
    "e2e",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros", "tokio", "tracing"] }
rusqlite = { version = "0.39", features = ["bundled"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["trace", "fs", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
sha2 = "0.11"
base64 = "0.22"
hex = "0.4"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tempfile = "3"
